# assignment1

./: pyproject.toml  q1.py  q2.py  q3.py  q4.py  run_q1.sh
output/: q1_chess1_Ha.npy  q1_chess1_angles.txt  q1_facade_Ha.npy  q1_tiles3_Ha.npy  q1_tiles3_angles.txt  q1_tiles5_Ha.npy  q2_chess1_angles.txt  q2_tiles5_angles.txt
output/q1/: facade_Ha.npy  facade_angles.txt  tiles5_Ha.npy  tiles5_angles.txt
output/q2/: tiles5_angles.txt
