[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "geoviz-assignment1"
version = "0.0.1"
description = "GeoViz 16822 Assignment 1: Rectification"
authors = ["Chris Klammer <cklammer@andrew.cmu.edu>"]

[tool.poetry.dependencies]
python = ">=3.9"
opencv-python = "^4.8.0.76"
tabulate = "^0.9.0"
pillow = "^10.0.1"
matplotlib = "^3.8.0"
